--- a/Palette/app/src/main/res/layout/activity_main.xml
+++ b/Palette/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="2">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/bg"
-            android:scaleType="center"/>
+            android:scaleType="centerCrop"/>
+
+
+
 
 
     </LinearLayout>
@@ -22,7 +25,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp">
 
         <LinearLayout
 
@@ -38,29 +45,35 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="#e9e1de"/>
+                android:backgroundTint="#e9e1de"
+                android:layout_marginRight="10dp"
+               />
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="#e7cccb"/>
+                android:backgroundTint="#e7cccb"
+                android:layout_marginRight="10dp"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="#77839a"/>
+                android:backgroundTint="#77839a"
+                android:layout_marginRight="10dp"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="#9ca9bd"/>
+                android:backgroundTint="#9ca9bd"
+                android:layout_marginRight="10dp"/>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="#c4ccd4"/>
+                android:backgroundTint="#c4ccd4"
+                android:layout_marginRight="10dp"/>
 
             <Button
                 android:layout_width="0dp"
