--- a/Palette/app/src/main/res/layout/activity_main.xml
+++ b/Palette/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+
+
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/bg"
-            android:scaleType="centerCrop"/>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/bg"
+                android:scaleType="centerCrop"/>
+
+            <RelativeLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="500dp">
+
+
+                <TextView
+                    android:id="@+id/colorView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="#ffffff"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="000-000-000"
+                    android:gravity="center"
+
+                    />
+
+                <TextView
+                    android:layout_alignLeft="@+id/colorView"
+                    android:layout_below="@+id/colorView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="22dp"
+                    android:text="//RGB"
+                    />
+
+            </RelativeLayout>
 
 
 
+        </FrameLayout>
 
 
     </LinearLayout>
@@ -42,26 +86,31 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/colorButton1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:backgroundTint="#e9e1de"
                 android:layout_marginRight="10dp"
-               />
+                />
 
             <Button
+                android:id="@+id/colorButton2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:backgroundTint="#e7cccb"
                 android:layout_marginRight="10dp"/>
+
             <Button
+                android:id="@+id/colorButton3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:backgroundTint="#77839a"
                 android:layout_marginRight="10dp"/>
             <Button
+                android:id="@+id/colorButton4"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -69,6 +118,7 @@
                 android:layout_marginRight="10dp"/>
 
             <Button
+                android:id="@+id/colorButton5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -76,6 +126,7 @@
                 android:layout_marginRight="10dp"/>
 
             <Button
+                android:id="@+id/colorButton6"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -88,3 +139,5 @@
     </LinearLayout>
 
 </LinearLayout>
+
+
